--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Baking App</string>
     <string name="base_url">https://d17h27t6h515a5.cloudfront.net/</string>
+    <string name="path_url">topher/2017/May/59121517_baking/baking.json</string>
 </resources>
