--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="navigate_back_button_string" translatable="false">Navigate back button</string>
+    <string name="ingredients">Ingredients</string>
 </resources>
