--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="navigate_back_button_string" translatable="false">Navigate back button</string>
-    <string name="ingredients">Ingredients</string>
+    <string name="ingredientsLabel">Ingredients</string>
+    <string name="id" translatable="false">id</string>
+    <string name="recipe" translatable="false">recipe</string>
+    <string name="recipe_introduction">Recipe Introduction</string>
+    <string name="set_text" translatable="false">setText</string>
 </resources>
